--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
   <![endif]-->
 
   <!-- Use "production.css" in production... -->
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/bootstrap-responsive.css">
-  <link rel="stylesheet/less" href="css/dev.less">
-  <script src="js/less.js"></script>
+  <link rel="stylesheet" href="/css/bootstrap.css">
+  <link rel="stylesheet" href="/css/bootstrap-responsive.css">
+  <link rel="stylesheet/less" href="/css/dev.less">
+  <script src="/js/less.js"></script>
 </head>
 <body>
 
@@ -31,7 +31,7 @@
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/jquery.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="/js/jquery.js"><\/script>')</script>
 
   <!-- Your JS goes here... -->
 
