--- a/css/dev.less
+++ b/css/dev.less
@@ -5,6 +5,10 @@
     padding: 25px 0;
 }
 
+.hidden {
+    display: none;
+}
+
 .header {
     #gradient > .vertical();
     color: #fff;
@@ -22,7 +26,7 @@
 }
 
 .apps {
-    padding: 50px 0;
+    padding: 50px 0 25px;
 }
 
 .schedule {
