--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <!-- Use "production.css" in production... -->
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/bootstrap-responsive.css">
-  <link rel="stylesheet/less" href="/css/dev.less">
-  <script src="/js/less.js"></script>
+  <link rel="stylesheet" href="/css/reset.css" type="text/css">
 </head>
 <body>
 
@@ -33,6 +29,7 @@
   <script>window.jQuery || document.write('<script src="/js/jquery.js"><\/script>')</script>
 
   <!-- Your JS goes here... -->
+  <script src="/js/main.js"></script>
 
   <!-- Google Analytics -->
   <script>
