--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,10 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <link rel="stylesheet" href="/css/reset.css" type="text/css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="/css/bootstrap-responsive.css" type="text/css">
+  <link rel="stylesheet/less" href="/css/dev.less">
+  <script src="js/less.js"></script>
 </head>
 <body>
 
@@ -28,7 +31,8 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="/js/jquery.js"><\/script>')</script>
 
-  <!-- Your JS goes here... -->
+  <!-- JS... -->
+  <script src="/js/bootstrap.min.js"></script>
   <script src="/js/main.js"></script>
 
   <!-- Google Analytics -->
