--- a/css/dev.less
+++ b/css/dev.less
@@ -2,16 +2,20 @@
 @import "less/mixins.less";
 
 body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .navbar-fixed-top {
-  margin-bottom: 0;
+    margin-bottom: 0;
+    .navbar-inner {
+        #gradient > .vertical(#3f3f3f, #222);
+        padding: 0;
+    }
 }
 
 .navbar .btn {
-  margin-right: 22px;
+    margin-right: 25px;
 }
 
 .map {
