--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
   <meta name="author" content="{{ site.author }}">
   <meta name="description" content="{{ site.description }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=300, initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <!--[if lt IE 9]>
