:zap: Correct sizing ftw :zap:

--- a/css/dev.less
+++ b/css/dev.less
@@ -7,7 +7,8 @@ body {
 }
 
 .navbar-fixed-top {
-    margin-bottom: 0;
+    margin: 0;
+    width: 100%;
     .navbar-inner {
         #gradient > .vertical(#3f3f3f, #222);
     }
@@ -19,10 +20,4 @@ body {
 
 iframe {
     width: 100%;
-}
-
-@media (max-width: 767px) {
-    .map .row-fluid .span12 {
-        margin-left: 20px;
-    }
 }
