--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
 
   <meta name="author" content="{{ site.author }}">
   <meta name="description" content="{{ site.description }}">
-  {% if page.size %}
-  <meta name="viewport" content="width={{page.size}}">
+  {% if page.page_size %}
+  <meta name="viewport" content="width={{page.page_size}}">
   {% else %}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% endif %}
