--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
   {% else %}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% endif %}
+
+  <link rel="apple-touch-icon-precomposed" href="/touch-icon-iphone.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/touch-icon-iphone@2x.png" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <!--[if lt IE 9]>
