--- a/css/dev.less
+++ b/css/dev.less
@@ -23,6 +23,12 @@ body {
         &:hover {
             text-decoration: none;
         }
+        img {
+            border: 0;
+            display: block;
+            margin: 20px auto 10px;
+            width: 40%;
+        }
     }
 }
 
