CSS and JS corrections

--- a/css/dev.less
+++ b/css/dev.less
@@ -26,9 +26,12 @@ body {
         img {
             border: 0;
             display: block;
-            margin: 20px auto 10px;
-            width: 40%;
+            height: 40px;
+            margin: 20px auto 0;
         }
+    }
+    .row {
+        padding-bottom: 10px;
     }
 }
 
@@ -38,4 +41,15 @@ body {
 
 iframe {
     width: 100%;
+}
+
+/* Tablets */
+@media (min-width: 767px) {
+    .navbar-fixed-top {
+        p {
+            font-size: 16px;
+            line-height: 1.4em;
+            padding: 0 10px;
+        }
+    }
 }
