--- a/css/dev.less
+++ b/css/dev.less
@@ -30,6 +30,9 @@ body {
             margin: 20px auto 0;
         }
     }
+    p {
+        text-shadow: 1px 1px 0 rgba(11, 11, 11, .25);
+    }
     .row {
         padding-bottom: 10px;
     }
@@ -47,7 +50,7 @@ iframe {
 @media (min-width: 767px) {
     .navbar-fixed-top {
         p {
-            font-size: 16px;
+            font-size: 18px;
             line-height: 1.4em;
             padding: 0 10px;
         }
