--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,6 @@
   {% endif %}
 
   <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
-  <link rel="apple-touch-icon-precomposed" href="/touch-icon-iphone.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/touch-icon-iphone@2x.png" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -25,8 +22,7 @@
 
   <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
   <link rel="stylesheet" href="/css/bootstrap-responsive.css" type="text/css">
-  <link rel="stylesheet/less" href="/css/dev.less">
-  <script src="js/less.js"></script>
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
