--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -158,19 +158,19 @@ textarea {
 body {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 16px;
+  line-height: 22px;
   color: #333333;
   background-color: #ffffff;
 }
 
 a {
-  color: #0088cc;
+  color: #333;
   text-decoration: none;
 }
 
 a:hover {
-  color: #005580;
+  color: #79A97A;
   text-decoration: underline;
 }
 
@@ -421,7 +421,7 @@ a:hover {
 }
 
 p {
-  margin: 0 0 9px;
+  margin: 0 0 20px;
 }
 
 p small {
@@ -3212,8 +3212,9 @@ input[type="submit"].btn.btn-mini {
 
 .nav > li > a:hover {
   text-decoration: none;
-  background-color: #eeeeee;
-}
+  border-bottom:5px solid #B9D800;
+/*  background-color: #eeeeee;
+*/}
 
 .nav > .pull-right {
   float: right;
@@ -3297,10 +3298,10 @@ input[type="submit"].btn.btn-mini {
 
 .nav-tabs > li > a,
 .nav-pills > li > a {
-  padding-right: 12px;
-  padding-left: 12px;
+  padding-right: 20px;
+  padding-left: 20px;
   margin-right: 2px;
-  line-height: 14px;
+  line-height: 25px;
 }
 
 .nav-tabs {
@@ -3316,9 +3317,9 @@ input[type="submit"].btn.btn-mini {
   padding-bottom: 8px;
   line-height: 18px;
   border: 1px solid transparent;
-  -webkit-border-radius: 4px 4px 0 0;
+/*  -webkit-border-radius: 4px 4px 0 0;
      -moz-border-radius: 4px 4px 0 0;
-          border-radius: 4px 4px 0 0;
+          border-radius: 4px 4px 0 0;*/
 }
 
 .nav-tabs > li > a:hover {
@@ -3339,15 +3340,15 @@ input[type="submit"].btn.btn-mini {
   padding-bottom: 8px;
   margin-top: 2px;
   margin-bottom: 2px;
-  -webkit-border-radius: 5px;
-     -moz-border-radius: 5px;
-          border-radius: 5px;
+  /*-webkit-border-radius: 5px;
+       -moz-border-radius: 5px;
+            border-radius: 5px;*/
 }
 
 .nav-pills > .active > a,
 .nav-pills > .active > a:hover {
-  color: #ffffff;
-  background-color: #0088cc;
+  color: #333;
+  border-bottom: 5px solid #B9D800;
 }
 
 .nav-stacked > li {
